Listofの記述不備の修正